--- a/less/forum/extension.less
+++ b/less/forum/extension.less
@@ -75,6 +75,9 @@
         line-height: 1.6;
         font-weight: bold;
       }
+      .item-bestAnswerPost {
+        display: none;
+      }
     }
 
     &--title {
